# dartt-protocol

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md  checksum.h  project.yml  serial-comms-struct.h  serial-comms.c  serial-comms.h  serial-motor-comms.c
docs/: DARTT_SYNC.md  LIBRARY_USAGE.md  PROTOCOL.md
examples/: CMakeLists.txt  dart_protocol_demo.c  debug_general_handler.c  example_uart_struct.c
src/: CMakeLists.txt  checksum.c  checksum.h  dartt.c  dartt.h  dartt_assert.h  dartt_check_buffer.h  dartt_crc.c  dartt_crc.h  dartt_sync.c  dartt_sync.h  serial-comms-FDCAN.c  serial-comms-FDCAN.h  serial-comms-struct.h  serial-comms.c  serial-comms.h  serial-motor-comms.c
test/: test_crc.c  test_dartt.c  test_helper.c  test_serial-comms.c  test_serial_comms-FDCAN.c  test_serial_comms.c  test_struct.c  test_sync.c
tools/: .gitignore  README.md  dartt-describe.py
